--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  font-family: 'Montserrat', sans-serif;
+  margin-left: 1em;
 }
