--- a/src/styles/BillsList.css
+++ b/src/styles/BillsList.css
@@ -20,10 +20,22 @@
 } */
 
 table {
-    margin: 50px auto 0 auto;
+    margin: 0 auto;
     width: 75%
+}
+
+th > h3, button {
+    display: inline;
 }
 
 tr {
     width: 100%;
+}
+
+.left-align {
+    text-align: left;
+}
+
+.right-align {
+    text-align: right;
 }
