Implement a mouse over effect that changes the background color of a bill.

--- a/src/styles/BillsList.css
+++ b/src/styles/BillsList.css
@@ -39,3 +39,11 @@ tr {
 .right-align {
     text-align: right;
 }
+/* 
+.bg-normal {
+    background-color: #FFFFFF;
+} */
+
+.bg-hover {
+    background-color: #F0F0F0;
+}
